crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_metadata_with_where_metadata_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp, round_scores)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.28",
      "dataset": "qs",
      "matches": {
        "answer": [
          "Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content."
        ]
      },
      "primary_key": {
        "id": 1015
      }
    },
    {
      "_score": "0.24",
      "dataset": "qs",
      "matches": {
        "answer": [
          "Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*)."
        ]
      },
      "primary_key": {
        "id": 821
      }
    },
    {
      "_score": "0.23",
      "dataset": "qs",
      "matches": {
        "answer": [
          "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients."
        ]
      },
      "primary_key": {
        "id": 449
      }
    },
    {
      "_score": "0.20",
      "dataset": "qs",
      "matches": {
        "answer": [
          "The body profile of Menidae is very deep and resembles a flat disc, due to the strongly curved ventral contour."
        ]
      },
      "primary_key": {
        "id": 1193
      }
    }
  ]
}
