crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_basic_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.77",
      "dataset": "qs",
      "matches": {
        "answer": [
          "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 948
      }
    },
    {
      "_score": "0.77",
      "dataset": "qs",
      "matches": {
        "answer": [
          "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
        ]
      },
      "primary_key": {
        "id": 468
      }
    },
    {
      "_score": "0.77",
      "dataset": "qs",
      "matches": {
        "answer": [
          "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]"
        ]
      },
      "primary_key": {
        "id": 189
      }
    },
    {
      "_score": "0.77",
      "dataset": "qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      }
    }
  ]
}
